individual-view: add menu item to rename groups

https://bugzilla.gnome.org/show_bug.cgi?id=501065